--- a/apps/mobile-wallet/android/app/src/main/AndroidManifest.xml
+++ b/apps/mobile-wallet/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
   <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
   <uses-permission android:name="android.permission.VIBRATE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
   <queries>
     <intent>
       <action android:name="android.intent.action.VIEW"/>
