--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -61,6 +61,7 @@
     "expo": "53.0.23",
     "expo-application": "~6.1.5",
     "expo-blur": "~14.1.5",
+    "expo-brightness": "~13.1.4",
     "expo-build-properties": "~0.14.8",
     "expo-camera": "~16.1.11",
     "expo-checkbox": "~4.1.4",
