--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
       "on-headers@<1.1.0": ">=1.1.0",
       "tar-fs@=2.1.1": "=2.1.3",
       "tmp@=0.2.1": "=0.2.4",
-      "node-forge@=1.3.2": ">=1.3.2"
+      "node-forge@=1.3.2": ">=1.3.2",
+      "glob@>=10.2.0 <10.5.0": "=10.5.0"
     }
   },
   "manypkg": {
