--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
       "tar-fs@=2.1.1": "=2.1.3",
       "tmp@=0.2.1": "=0.2.4",
       "node-forge@=1.3.2": ">=1.3.2",
-      "glob@>=10.2.0 <10.5.0": "=10.5.0"
+      "glob@>=10.2.0 <10.5.0": "=10.5.0",
+      "qs@<6.14.1": ">=6.14.1"
     }
   },
   "manypkg": {
