--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
       "tmp@=0.2.1": "=0.2.4",
       "node-forge@=1.3.2": ">=1.3.2",
       "glob@>=10.2.0 <10.5.0": "=10.5.0",
-      "qs@<6.14.1": ">=6.14.1"
+      "qs@<6.14.1": ">=6.14.1",
+      "js-yaml@=3.14.1": "=3.14.2",
+      "js-yaml@=4.1.0": "=4.1.1"
     }
   },
   "manypkg": {
