--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
       "glob@>=10.2.0 <10.5.0": "=10.5.0",
       "qs@<6.14.1": ">=6.14.1",
       "js-yaml@=3.14.1": "=3.14.2",
-      "js-yaml@=4.1.0": "=4.1.1"
+      "js-yaml@=4.1.0": "=4.1.1",
+      "h3@<=1.15.4": ">=1.15.5"
     }
   },
   "manypkg": {
