--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
       "qs@<6.14.1": ">=6.14.1",
       "js-yaml@=3.14.1": "=3.14.2",
       "js-yaml@=4.1.0": "=4.1.1",
-      "h3@<=1.15.4": ">=1.15.5"
+      "h3@<=1.15.4": ">=1.15.5",
+      "ajv@>=7.0.0-alpha.0 <8.18.0": ">=8.18.0"
     }
   },
   "manypkg": {
