--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
       "js-yaml@=3.14.1": "=3.14.2",
       "js-yaml@=4.1.0": "=4.1.1",
       "h3@<=1.15.4": ">=1.15.5",
-      "ajv@>=7.0.0-alpha.0 <8.18.0": ">=8.18.0"
+      "ajv@>=7.0.0-alpha.0 <8.18.0": ">=8.18.0",
+      "bn.js@<5.2.3": ">=5.2.3"
     }
   },
   "manypkg": {
