--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -47,16 +47,17 @@
     "@tanstack/query-sync-storage-persister": "^5.81.2",
     "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-query-persist-client": "^5.81.2",
-    "@walletconnect/core": "2.21.3",
+    "@walletconnect/core": "2.23.6",
     "@walletconnect/jsonrpc-types": "^1.0.4",
     "@walletconnect/keyvaluestorage": "1.1.1",
-    "@walletconnect/react-native-compat": "2.21.3",
-    "@walletconnect/sign-client": "2.21.3",
-    "@walletconnect/utils": "2.21.3",
+    "@walletconnect/react-native-compat": "2.23.6",
+    "@walletconnect/sign-client": "2.23.6",
+    "@walletconnect/utils": "2.23.6",
     "axios": "^1.13.5",
     "big-integer": "^1.6.51",
     "colord": "^2.9.3",
     "dayjs": "^1.10.7",
+    "events": "^3.3.0",
     "expo": "53.0.27",
     "expo-application": "~6.1.5",
     "expo-blur": "~14.1.5",
@@ -118,6 +119,7 @@
     "react-native-webview": "^13.13.5",
     "react-qr-code": "^2.0.15",
     "react-redux": "^9.2.0",
+    "readable-stream": "^4.7.0",
     "redux-devtools-expo-dev-plugin": "^1.0.0",
     "styled-components": "^6.1.19",
     "stylis": "^4.0.0",
@@ -131,7 +133,7 @@
     "@types/lodash": "^4.14.182",
     "@types/react": "~19.0.14",
     "@types/react-native-background-timer": "^2.0.2",
-    "@walletconnect/types": "2.21.3",
+    "@walletconnect/types": "2.23.6",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.48.0",
     "jest": "^29.7.0",
